--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "convert-excel-sheets",
   "version": "0.0.0",
+  "homepage": "https://razabk.github.io/excels-converter/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
