--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@angular/router": "~11.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.3",
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1101.2",
